--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -35,5 +35,8 @@
     "@babel/core": "^7.23.9",
     "@babel/parser": "^7.23.9",
     "@babel/traverse": "^7.23.9"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
