chore: Optimize release task
We don't need to run build on every release action exec. We only need to run it before npm publish.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "turbo lint",
     "test": "turbo test",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "release": "changeset publish"
+    "release": "yarn build && yarn changeset publish"
   },
   "devDependencies": {
     "@react-unforget/eslint-config": "*",
