--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -22,7 +22,7 @@
     "lint": "echo 'No checks yet'"
   },
   "dependencies": {
-    "@react-unforget/compiler": "latest"
+    "@react-unforget/compiler": "0.1.0-dev.4"
   },
   "devDependencies": {
     "@react-unforget/eslint-config": "*",
