--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -7,13 +7,11 @@
     "dist",
     "README.md"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "exports": {
-    "require": "./dist/index.js",
-    "import": "./dist/index.mjs",
-    "types": "./dist/index.d.ts"
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.js"
   },
   "scripts": {
     "dev": "yarn build --watch",
