--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,7 +9,19 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/parser": "^7.24.0",
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@codesandbox/sandpack-react": "^2.13.4",
+    "@react-unforget/babel-plugin": "0.1.0-dev.4",
+    "@react-unforget/compiler": "0.1.0-dev.5",
+    "@react-unforget/runtime": "0.1.0-dev.4",
+    "@vercel/analytics": "^1.2.2",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.343.0",
     "next": "^14.0.4",
+    "nextra": "^2.13.3",
+    "nextra-theme-docs": "^2.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -21,7 +33,11 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
     "eslint": "^8.56.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
