--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,12 +9,11 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/parser": "^7.24.0",
     "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/standalone": "^7.24.0",
     "@codesandbox/sandpack-react": "^2.13.4",
-    "@react-unforget/babel-plugin": "0.1.0-dev.4",
-    "@react-unforget/compiler": "0.1.0-dev.5",
+    "@react-unforget/babel-plugin": "0.1.0-dev.6",
+    "@react-unforget/compiler": "0.1.0-dev.7",
     "@react-unforget/runtime": "0.1.0-dev.4",
     "@vercel/analytics": "^1.2.2",
     "classnames": "^2.5.1",
@@ -29,9 +28,9 @@
     "@next/eslint-plugin-next": "^14.0.4",
     "@react-unforget/eslint-config": "*",
     "@react-unforget/typescript-config": "*",
-    "@types/eslint": "^8.56.1",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
+    "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.7.2",
