--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -10,7 +10,7 @@
     "lint": "echo 'Add lint script here'"
   },
   "dependencies": {
-    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
