--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/standalone": "^7.24.0",
