--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,11 @@
       "request": "launch",
       "name": "Jest: current file",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["${fileBasenameNoExtension}", "--config", "${workspaceFolder}/packages/compiler/jest.config.ts"],
+      "args": [
+        "${fileBasenameNoExtension}",
+        "--config",
+        "${workspaceFolder}/packages/babel-plugin/jest.config.ts"
+      ],
       "console": "integratedTerminal",
       "disableOptimisticBPs": true,
       "windows": {
