--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -1,34 +1,53 @@
 {
   "name": "@react-unforget/babel-plugin",
-  "version": "0.1.0-dev.7",
+  "version": "0.1.0-dev.8",
   "license": "MIT",
   "type": "module",
   "files": [
     "dist",
     "README.md"
   ],
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "main": "dist/main.cjs",
+  "module": "dist/main.js",
+  "types": "dist/main.d.ts",
   "exports": {
-    "require": "./dist/index.cjs",
-    "import": "./dist/index.js"
+    ".": {
+      "import": "./dist/main.js",
+      "require": "./dist/main.cjs",
+      "types": "./dist/main.d.ts"
+    }
   },
   "scripts": {
     "dev": "yarn build --watch",
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "test": "echo 'No checks yet'",
-    "lint": "echo 'No checks yet'"
-  },
-  "dependencies": {
-    "@react-unforget/compiler": "0.1.0-dev.8"
+    "build": "tsup",
+    "test": "jest",
+    "lint": "eslint src/**/*.{ts,tsx} --max-warnings 15"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/plugin-transform-typescript": "^7.23.6",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/standalone": "^7.24.0",
     "@react-unforget/eslint-config": "*",
     "@react-unforget/jest-config": "*",
+    "@react-unforget/runtime": "^0.1.0-dev.4",
     "@react-unforget/typescript-config": "*",
-    "@types/react": "^18.2.61",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/babel__standalone": "^7.1.7",
+    "@types/babel__traverse": "^7.20.5",
+    "babel-preset-jest": "^29.6.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^8.0.2"
+  },
+  "dependencies": {
+    "@babel/helper-validator-identifier": "^7.22.20",
+    "@babel/parser": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/traverse": "^7.24.0",
+    "@babel/types": "^7.24.0"
   },
   "publishConfig": {
     "access": "public"
