--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -21,7 +21,7 @@
     "dev": "yarn build --watch",
     "build": "tsup",
     "test": "jest",
-    "lint": "eslint src/**/*.{ts,tsx} --max-warnings 15"
+    "lint": "eslint src/ --max-warnings 15"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.23.3",
