--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,6 +13,7 @@
     "@vercel/style-guide": "^5.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^1.11.3",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-only-warn": "^1.1.0",
     "typescript": "^5.3.3"
   }
