--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -15,6 +15,11 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
+    },
+    "./testing": {
+      "import": "./dist/testing.js",
+      "require": "./dist/testing.cjs",
+      "types": "./dist/testing.d.ts"
     }
   },
   "scripts": {
