--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-unforget/eslint-config": "*",
     "@react-unforget/typescript-config": "*",
     "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "turbo": "latest"
   },
   "engines": {
