--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,28 @@
   "version": "1.0.0",
   "configurations": [
     {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug integration test 'fixture'",
+      "cargo": {
+        "args": [
+          "test",
+          "--no-run",
+          "--test=fixture",
+          "--package=react_unforget_transform"
+        ],
+        "filter": {
+          "name": "fixture",
+          "kind": "test"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "CARGO_MANIFEST_DIR": "${workspaceFolder}/packages/swc-plugin/transform"
+      }
+    },
+    {
       "type": "node",
       "request": "launch",
       "name": "Jest: current file",
